--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
-
     defaultConfig {
         applicationId "com.example.assignmentproject"
         minSdkVersion 16
@@ -18,9 +17,18 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "API_DOMAIN", '"https://newsapi.org"'
+            buildConfigField "String", "DOMAIN", '"newsapi.org"'
+            debuggable = true
+        }
         release {
-            minifyEnabled false
+            buildConfigField "String", "API_DOMAIN", '"https://newsapi.org"'
+            buildConfigField "String", "DOMAIN", '"newsapi.org"'
+            shrinkResources true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable = true
         }
     }
     dataBinding {
@@ -53,10 +61,19 @@ dependencies {
     implementation "com.squareup.inject:assisted-inject-annotations-dagger2:0.5.2"
     implementation "javax.annotation:jsr250-api:1.0"
 
+    //retrofit
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
+
     //rxjava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.rxbinding3:rxbinding-appcompat:3.1.0'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
