--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,11 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
+    //room
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt "androidx.room:room-compiler:2.2.5"
+    implementation 'androidx.room:room-rxjava2:2.2.5'
+
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
