--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ android {
     packagingOptions {
         exclude 'META-INF/gradle/incremental.annotation.processors'
     }
+    testOptions {
+        unitTests.includeAndroidResources = true
+        unitTests.returnDefaultValues = true
+    }
+
 }
 
 dependencies {
@@ -51,6 +56,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+
     //dagger
     implementation "com.google.dagger:dagger-android:2.26"
     implementation "com.google.dagger:dagger:2.26"
@@ -85,8 +92,32 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
 
+    implementation 'org.jetbrains.kotlin:kotlin-test-junit:1.3.72'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    testImplementation 'org.mockito:mockito-inline:3.2.4'
+    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation 'android.arch.core:core-testing:1.1.1'
+    testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.0.0'
+    testImplementation 'com.squareup.okhttp3:okhttp:4.5.0'
+    testImplementation 'org.json:json:20190722'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.3.1'
+
+    testImplementation 'com.google.dagger:dagger:2.26'
+    testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.26'
+    kaptTest 'com.google.dagger:dagger-compiler:2.26'
+    androidTestImplementation 'com.google.dagger:dagger:2.26'
+    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.26'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.26'
+    androidTestImplementation 'org.powermock:powermock-mockito-release-full:1.6.4'
+    androidTestImplementation 'org.powermock:powermock-module-junit4:1.6.4'
+    androidTestImplementation 'org.easymock:easymock:3.4'
+    androidTestImplementation 'org.powermock:powermock-api-easymock:1.6.4'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'com.google.truth:truth:1.0.1'
 
 }
